[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui/WarningSystem/WarningSystem.gd" type="Script" id=1]
[ext_resource path="res://assets/achievement_icons/XIcon.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/upheavtt_80.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/upheavtt_40.tres" type="DynamicFont" id=4]

[sub_resource type="GDScript" id=12]

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform float value = 1.0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (value != 1.0) {
		if (COLOR.r > 0.3 && COLOR.b > 0.3 && COLOR.g > 0.3) {
			COLOR.rgb = vec3(value);
		}
	}
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 13 )
shader_param/value = 1.0
script = SubResource( 12 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="InputEventKey" id=14]
scancode = 16777217

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 14 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[node name="WarningSystem" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 83.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 3 )
text = "Warning System"
align = 1
valign = 1

[node name="QuitButton" type="Button" parent="."]
material = SubResource( 15 )
margin_left = 1206.0
margin_top = 16.0
margin_right = 1254.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1.00458 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
shortcut = SubResource( 21 )
icon = ExtResource( 2 )
icon_align = 1

[node name="Buttons" type="HBoxContainer" parent="."]
margin_top = 83.0
margin_right = 1280.0
margin_bottom = 166.0
custom_constants/separation = 1

[node name="Rain" type="CenterContainer" parent="Buttons"]
margin_right = 426.0
margin_bottom = 83.0
rect_min_size = Vector2( 426, 83 )

[node name="ColorRect" type="ColorRect" parent="Buttons/Rain"]
margin_right = 426.0
margin_bottom = 83.0
rect_min_size = Vector2( 426, 83 )
color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="Button" type="Button" parent="Buttons/Rain"]
margin_left = 84.0
margin_top = 13.0
margin_right = 342.0
margin_bottom = 69.0
rect_min_size = Vector2( 258, 56 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.341176, 0.341176, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.180392, 0.180392, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
disabled = true
text = "Rain Gauge"

[node name="Anemometer" type="CenterContainer" parent="Buttons"]
margin_left = 427.0
margin_right = 853.0
margin_bottom = 83.0
rect_min_size = Vector2( 426, 83 )

[node name="ColorRect" type="ColorRect" parent="Buttons/Anemometer"]
margin_left = 75.0
margin_top = 13.0
margin_right = 351.0
margin_bottom = 69.0
rect_min_size = Vector2( 276, 56 )
color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="Button" type="Button" parent="Buttons/Anemometer"]
margin_left = 75.0
margin_top = 13.0
margin_right = 351.0
margin_bottom = 69.0
rect_min_size = Vector2( 276, 56 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.341176, 0.341176, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.180392, 0.180392, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "Anemometer"

[node name="Tide" type="CenterContainer" parent="Buttons"]
margin_left = 854.0
margin_right = 1280.0
margin_bottom = 83.0
rect_min_size = Vector2( 426, 83 )

[node name="ColorRect" type="ColorRect" parent="Buttons/Tide"]
margin_left = 87.0
margin_top = 13.0
margin_right = 338.0
margin_bottom = 69.0
rect_min_size = Vector2( 251, 56 )
color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="Button" type="Button" parent="Buttons/Tide"]
margin_left = 87.0
margin_top = 13.0
margin_right = 338.0
margin_bottom = 69.0
rect_min_size = Vector2( 251, 56 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.341176, 0.341176, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.180392, 0.180392, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "Tide Gauge"

[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_button_down"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Buttons/Rain/Button" to="." method="_on_Rain_pressed"]
[connection signal="pressed" from="Buttons/Anemometer/Button" to="." method="_on_Anemometer_pressed"]
[connection signal="pressed" from="Buttons/Tide/Button" to="." method="_on_Tide_pressed"]
